--- a/style.css
+++ b/style.css
@@ -172,4 +172,117 @@ margin: 10px;
   float:right;
   
 }
+/* Phần này của Trang */
+.body, .body1{
+  margin: 0;
+  font-family:"Open Sans",sans-serif;
+  font-size: 18px;
+  font-weight: 15px;
+  margin-top: 20px;
+  text-align: left;
+  width: 1000px;
+}
+.top-charts, .top-charts1{
+width: 1000px;
+padding: 0px;
+margin: auto;
+font-family: 'Courier New', Courier, monospace;
+font-weight: 700;
+font-size: 26px;
+line-height: 1.25;
+}
+.cols{
+/* float: left; */
+/* box-sizing: border-box; */
+display: inline-block;
+/* text-align: center;  */
+width: 100%;
+margin: auto;
+}
+.cols1{
+display: inline-block;
+text-align: center; 
+width: 100%;
+/* padding: 10px; */
+}
+/* .infor-music, .infor-music1{
+margin: 5px;
+width: 16%;
+margin: 1%;
+} */
+.infor-music{
+position: relative;
+width: 16%;
+padding: 10px;
+}
+.infor-music1 {
+width: 16%;
+padding: 17px;
+}
+.music-image{
+width: 160px;
+border-radius: 10px;
+text-align: center;
+}
+.music-image1{
+width: 160px;
+border-radius: 50%;
+}
+.music-name, .music-singer, .music-singer1{
+font-size: 12px;
+margin: 5px;
+color: #8c9095;
+}
+.music-singer1{
+font-size: 12px;
+margin: 5px;
+color: #323334;
+}
 
+.music-name{
+font-weight: bolder;
+color: black;
+}
+i{
+position: absolute;
+top: 20px;
+left: 20px;
+size: 50px;
+}
+
+.view-all{
+text-align:right;
+padding: 0 0 0.125rem;
+font-weight: 600;
+text-transform: uppercase;
+border: none;
+font-size: .8125rem;
+font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+position: relative;
+border-radius: 0;
+color: #196eed;
+}
+
+.swiper-pagination{
+position: relative;
+width: 1000px;
+text-align: center;
+}
+.swiper-pagination-bullet{
+position: absolute;
+display: inline-block;
+text-align: center;
+width: 27px;
+height: 5px;
+background-color: #196EED;
+}
+.swiper-pagination-bullet1{
+position: absolute;
+display: inline-block;
+/* float: left; */
+width: 27px;
+height: 5px;
+margin-left: 70px;
+text-align: center;
+background-color: #D1E2FB;
+}
