--- a/component.css
+++ b/component.css
@@ -1,6 +1,3 @@
-body {
-  font-family: "Open Sans", sans-serif; }
-
 * {
   margin: 0;
   font-family: "Open Sans", sans-serif; }
@@ -97,13 +94,18 @@ header {
       margin: 0.5rem auto 0 auto; }
       header div#nvarbar .nvarbar .left {
         display: flex;
-        align-items: center; }
-        header div#nvarbar .nvarbar .left .search i {
-          margin-right: 10px; }
-          header div#nvarbar .nvarbar .left .search i input {
-            width: 50%;
-            background: transparent;
-            color: white; }
+        align-items: center;
+        width: 70%; }
+        header div#nvarbar .nvarbar .left .search {
+          width: 100%;
+          display: flex;
+          align-items: center; }
+          header div#nvarbar .nvarbar .left .search i {
+            margin-right: 10px; }
+            header div#nvarbar .nvarbar .left .search i input {
+              width: 50%;
+              background: transparent;
+              color: white; }
       header div#nvarbar .nvarbar .right {
         display: flex; }
         header div#nvarbar .nvarbar .right .user,
@@ -162,7 +164,7 @@ footer {
         border-radius: 50%; }
 
 section#body .main {
-  width: 95%;
+  width: 90%;
   margin: 0 auto; }
   section#body .main .top-page {
     width: 100%; }
@@ -199,21 +201,21 @@ section#body .main {
             border-bottom: 2px solid;
             color: #196eed; }
       section#body .main .top-page .body .cols {
-        display: inline-block;
         width: 100%;
-        margin: auto; }
+        display: flex;
+        justify-content: space-between; }
         section#body .main .top-page .body .cols .infor-music {
           position: relative;
-          width: 16%; }
+          width: 18%; }
           section#body .main .top-page .body .cols .infor-music i {
             position: absolute;
-            top: 20px;
-            left: 20px;
+            top: 3%;
+            left: 3%;
             size: 50px; }
           section#body .main .top-page .body .cols .infor-music .music-image {
-            width: 160px;
+            text-align: center;
             border-radius: 10px;
-            text-align: center; }
+            width: 100%; }
           section#body .main .top-page .body .cols .infor-music .music-name {
             font-size: 12px;
             margin: 5px;
@@ -258,18 +260,23 @@ section#body .main {
             border-bottom: 2px solid;
             color: #196eed; }
       section#body .main .feature-artists .body1 .cols1 {
-        display: inline-block;
+        display: flex;
         text-align: center;
-        width: 100%; }
+        width: 100%;
+        justify-content: space-between; }
         section#body .main .feature-artists .body1 .cols1 .infor-music1 {
-          width: 16%;
-          padding: 17px; }
+          width: 14.6666666666666666666666666%;
+          box-sizing: border-box;
+          padding: 1%;
+          margin: 0 0.8%;
+          display: flex;
+          flex-direction: column; }
           section#body .main .feature-artists .body1 .cols1 .infor-music1 .music-image1 {
-            width: 160px;
+            width: 100%;
             border-radius: 50%; }
           section#body .main .feature-artists .body1 .cols1 .infor-music1 .music-singer1 {
-            font-size: 12px;
-            margin: 5px;
+            font-size: 1rem;
+            margin: 5% 0;
             color: #323334; }
     section#body .main .feature-artists .swiper-pagination {
       width: 100%;
@@ -405,12 +412,10 @@ section#body .main {
               width: 2.5rem; }
           section#body .main .middle-page .right-events .row .song .info-song .name-song {
             font-size: 0.9rem;
-            font-weight: bold;
-            white-space: nowrap; }
+            font-weight: bold; }
           section#body .main .middle-page .right-events .row .song .info-song .singer-song {
             font-size: 0.7rem;
-            color: #8c9095;
-            white-space: nowrap; }
+            color: #8c9095; }
         section#body .main .middle-page .right-events .row .type ul {
           display: flex;
           align-items: center; }
@@ -441,6 +446,11 @@ section#body .main {
             display: flex;
             align-items: center;
             margin: 0.5rem 0; }
+            section#body .main .top-albums .cols .recents .row .song .number {
+              font-size: 1.25rem;
+              margin-right: 1rem;
+              width: 2rem;
+              text-align: right; }
             section#body .main .top-albums .cols .recents .row .song .image-song {
               margin-right: 1rem; }
               section#body .main .top-albums .cols .recents .row .song .image-song img {
@@ -470,7 +480,8 @@ input[type="text"] {
   background: transparent;
   border: none;
   outline: none;
-  color: white; }
+  color: white;
+  width: 100%; }
 
 a:visited {
   color: #196eed; }
